<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mp3Tagger</string>
    <string name="action_settings">Settings</string>
    <string name="tv_selection_default">Selected Items: </string>
    <string name="empty"></string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="error_title">Error</string>
    <string name="confirm">OK</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_rootDir">Root Directory</string>
    <string name="pref_rootDir_sum">Default root directory from which the file selection interface will begin</string>
    <string name="pref_rootDir_default">/storage/extSdCard/Musik</string>
    <string name="pref_playable">Play song on click</string>
    <string name="pref_playable_sum">Whether a song should be played when clicking on it in the file selection menu</string>
    <string name="pref_recursion">Directory recursion</string>
    <string name="pref_recursion_sum">The Maximum depth to which directories will be scanned for files</string>
    <string name="pref_recursion_default">2</string>
	
    <string name="title_activity_cover">Cover Selection</string>
    <string name="tab_selection_header">File Selection</string>
    <string name="tab_editing_header">Tag Editing</string>
    
    <string-array name="pref_recursion_entries">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="tvTitleContent">Title</string>
    <string name="tvArtistContent">Artist</string>
    <string name="tvAlbumContent">Album Title</string>
    <string name="tvComposerContent">Composer</string>
    <string name="tvTracknumberContent">Number</string>
    <string name="tvGenreContent">Genre</string>
    <string name="tvCoverContent">Album Cover</string>
    <string name="tvAlbumArtistContent">Album Artist</string>
    <string name="tvYearContent">Year</string>
    <string name="btnSaveTagsLabel">Save Tags</string>
    <string name="btnSaveCoverLabel">Save Selected Cover</string>
    <string name="noValues">[None]</string>
    <string name="multipleValues">[Multiple]</string>
    <string name="hello_world">Hello world!</string>
    <string name="diaAddFiles">Reading Files&#8230;</string>
    <string name="diaSaveFiles">Saving Files&#8230;</string>
    <string name="coverAlert_title">Alert</string>
    <string name="coverAlert">The current selection contains multiple folders. Write cover file in every folder?</string>
    <string name="coverError">An Error occurred while retrieving images. Try again?</string>
    <string name="title_activity_album_cover">Select Album Cover</string>
    <string name="selectionError">Error reading files: not all files could be selected.</string>

    <string name="icon_description">Graphical Icon that adds visual feedback as for the type of the Filelist entry (directory or mp3-file)</string>
    <string name="refresh_description">Refresh</string>
    <string name="cover_description">Fetch Album Covers from the internet</string>
</resources>