<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/lvFiles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Seperator view -->

    <View
        android:id="@+id/vwSeperator"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#00004F"
        android:visibility="visible" />

    <ScrollView
        android:id="@+id/svTags"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Elements for Title Field Input -->

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingTop="20dp"
                android:text="@string/tvTitleContent" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:padding="10dp"
                    android:selectAllOnFocus="true"
                    android:maxLength="@integer/maxInput" />

                <CheckBox
                    android:id="@+id/cbTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/empty" />
            </LinearLayout>

            <!-- Elements for Artist Field Input -->

            <TextView
                android:id="@+id/tvArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingTop="20dp"
                android:text="@string/tvArtistContent" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/etArtist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:padding="10dp"
                    android:selectAllOnFocus="true" 
                    android:maxLength="@integer/maxInput"/>

                <CheckBox
                    android:id="@+id/cbArtist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/empty" />
            </LinearLayout>

            <!-- Elements for Album Title Field Input -->

            <TextView
                android:id="@+id/tvAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingTop="20dp"
                android:text="@string/tvAlbumContent" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/etAlbum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:padding="10dp"
                    android:selectAllOnFocus="true"
                    android:maxLength="@integer/maxInput" />

                <CheckBox
                    android:id="@+id/cbAlbum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/empty" />
            </LinearLayout>

            <!-- Elements for Album Artist Field Input -->

            <TextView
                android:id="@+id/tvAlbumArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingTop="20dp"
                android:text="@string/tvAlbumArtistContent" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/etAlbumArtist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:padding="10dp"
                    android:selectAllOnFocus="true"
                    android:maxLength="@integer/maxInput" />

                <CheckBox
                    android:id="@+id/cbAlbumArtist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/empty" />
            </LinearLayout>

            <!-- Elements for Composer Field Input -->

            <TextView
                android:id="@+id/tvComposer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingTop="20dp"
                android:text="@string/tvComposerContent" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/etComposer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:padding="10dp"
                    android:selectAllOnFocus="true"
                    android:maxLength="@integer/maxInput" />

                <CheckBox
                    android:id="@+id/cbComposer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/empty" />
            </LinearLayout>

            <!-- Layout for Tracknumber, Genre and Album Cover Input -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingTop="20dp" >

                <!-- Input Elements for the TrackNumber Field -->

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvTracknumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/tvTracknumberContent" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <NumberPicker
                            android:id="@+id/npTracknumber"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:orientation="horizontal"
                            android:padding="10dp" 
                            />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" >

                            <CheckBox
                                android:id="@+id/cbTracknumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:padding="5dp"
                                android:text="@string/empty" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>

                <!-- Input Elements for the Genre Field -->

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/tvGenreContent" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <Spinner
                            android:id="@+id/spGenre"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="10dp" />

                        <CheckBox
                            android:id="@+id/cbGenre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/empty" />
                    </LinearLayout>

                    <!-- Elements for the year input field -->

                    <TextView
                        android:id="@+id/tvYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/tvYearContent" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/etYear"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:padding="10dp"
                            android:selectAllOnFocus="true"
                            android:maxLength="@integer/maxYearInput" />

                        <CheckBox
                            android:id="@+id/cbYear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/empty" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Image Button for changing to the Cover Tab -->

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/tvCover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/tvCoverContent" />

                    <ImageButton
                        android:id="@+id/btnEditCover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/cover_description"
                        android:padding="20dp"
                        android:src="@drawable/ic_mp3file"
                        android:text="@string/empty" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSaveTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSaveTagsLabel" />

</LinearLayout>